--- a/package.json
+++ b/package.json
@@ -20,10 +20,13 @@
     "@angular/platform-browser": "~13.1.0",
     "@angular/platform-browser-dynamic": "~13.1.0",
     "@angular/router": "~13.1.0",
+    "@types/three": "^0.136.1",
     "angular-material-expansion-panel": "^0.7.2",
     "bootstrap": "^5.1.3",
     "express": "^4.17.2",
     "rxjs": "~7.4.0",
+    "save": "^2.4.0",
+    "three": "^0.136.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
   },
