--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     "angular-material-expansion-panel": "^0.7.2",
     "bootstrap": "^5.1.3",
     "express": "^4.17.2",
+    "gsap": "^3.9.1",
+    "lil-gui": "^0.16.0",
     "rxjs": "~7.4.0",
     "save": "^2.4.0",
     "three": "^0.136.0",
